Tweak answers as a result of changes to SOMD native analysis

--- a/absolute_binding_free_energies/analysis_abfe.ipynb
+++ b/absolute_binding_free_energies/analysis_abfe.ipynb
@@ -353,7 +353,7 @@
     "\n",
     "<img src=\"images/convergence_equil.png\" width=\"1000\"/>\n",
     "\n",
-    "This removes the initial correlation between the time evolution of the repeat runs, and results in average estimates (blue line) for the vanish and discharge stages which show no clear drift with time, suggesting that we have achieved convergence. There appears to be some drift for the restrain stage, although the gradient is very shallow. With equilibration, we found $\\Delta\\textit{G}_{\\textrm{Bind}}^o=-9.03 \\pm 1.06$ kcal mol $^{-1}$ (95 % t-based confidence interval). Note that because `Absolute.analyse()` discards the first 40 % of the trajectory by default for SOMD, this analysis shows that our previous results should not be subject to bias resulting from including the unequilibrated portion of the trajectory.\n",
+    "This removes the initial correlation between the time evolution of the repeat runs, and results in average estimates (blue line) for the vanish and discharge stages which show no clear drift with time, suggesting that we have achieved convergence. There appears to be some drift for the restrain stage, although the gradient is very shallow. With equilibration, we found $\\Delta\\textit{G}_{\\textrm{Bind}}^o=-9.03 \\pm 1.06$ kcal mol $^{-1}$ (95 % t-based confidence interval). Note that because `Absolute.analyse()` discards only the first 5 % of the trajectory by default for SOMD, this analysis shows that our previous results will be subject to bias resulting from including the unequilibrated portion of the trajectory.\n",
     "\n",
     "Repeating this analysis in reverse and comparing with the analysis in the forward direction can be helpful for diagnosing insufficient equilibration time.\n",
     "\n",
