--- a/absolute_binding_free_energies/answers/analysis_abfe_answers.ipynb
+++ b/absolute_binding_free_energies/answers/analysis_abfe_answers.ipynb
@@ -398,7 +398,7 @@
     "\n",
     "<img src=\"images/convergence_equil.png\" width=\"1000\"/>\n",
     "\n",
-    "This removes the initial correlation between the time evolution of the repeat runs, and results in average estimates (blue line) for the vanish and discharge stages which show no clear drift with time, suggesting that we have achieved convergence. There appears to be some drift for the restrain stage, although the gradient is very shallow. With equilibration, we found $\\Delta\\textit{G}_{\\textrm{Bind}}^o=-9.03 \\pm 1.06$ kcal mol $^{-1}$ (95 % t-based confidence interval). Note that because `Absolute.analyse()` discards the first 40 % of the trajectory by default for SOMD, this analysis shows that our previous results should not be subject to bias resulting from including the unequilibrated portion of the trajectory.\n",
+    "This removes the initial correlation between the time evolution of the repeat runs, and results in average estimates (blue line) for the vanish and discharge stages which show no clear drift with time, suggesting that we have achieved convergence. There appears to be some drift for the restrain stage, although the gradient is very shallow. With equilibration, we found $\\Delta\\textit{G}_{\\textrm{Bind}}^o=-9.03 \\pm 1.06$ kcal mol $^{-1}$ (95 % t-based confidence interval). Note that because `Absolute.analyse()` discards only the first 5 % of the trajectory by default for SOMD, this analysis shows that our previous results will be subject to bias resulting from including the unequilibrated portion of the trajectory.\n",
     "\n",
     "Repeating this analysis in reverse and comparing with the analysis in the forward direction can be helpful for diagnosing insufficient equilibration time.\n",
     "\n",
@@ -496,7 +496,7 @@
     "-9.46 \\pm 0.77 - 0.65 = -10.11 \\pm 0.77 \\;\\mathrm{kcal} \\; \\mathrm{mol}^{-1} \n",
     " \\end{equation*}\n",
     "\n",
-    "- Superficially, this appears to be a much poorer answer than our rough initial estimate of $-8.78 \\pm 0.12$ kcal mol $^{-1}$, which is closer to the experimental result ($-8.98 \\pm 0.28$ kcal mol $^{-1}$) and has a smaller confidence interval. However, as we have discussed above, the \"correct\" answer for our model in the limit of infinite sampling will be different to the experimental value, and our final answer is a far more rigorous estimate of this value with a far more realistic estimate of the random error arising from incomplete sampling. While not within \"chemical accuracy\" (1 kcal mol $^{-1}$) of the experimental result, our final answer shows reasonable agreement with experiment."
+    "- Superficially, this appears to be a much poorer answer than our rough initial estimate of $-8.65 \\pm 0.23$ kcal mol $^{-1}$, which is closer to the experimental result ($-8.98 \\pm 0.28$ kcal mol $^{-1}$) and has a smaller confidence interval. However, as we have discussed above, the \"correct\" answer for our model in the limit of infinite sampling will be different to the experimental value, and our final answer is a far more rigorous estimate of this value with a far more realistic estimate of the random error arising from incomplete sampling. While not within \"chemical accuracy\" (1 kcal mol $^{-1}$) of the experimental result, our final answer shows reasonable agreement with experiment."
    ]
   },
   {
