--- a/introduction_to_alchemistry/alchemical_introduction.ipynb
+++ b/introduction_to_alchemistry/alchemical_introduction.ipynb
@@ -214,7 +214,7 @@
     "#### <span style=\"color:teal\">1.2 Paramaterising Molecules</span>\n",
     "<a id=\"param\"></a>\n",
     "\n",
-    "Current we only have the coordinates information saved for the loaded molecules so the first thing we need to do is generated some forcefield parameters. In this case, we will use the Generalise Amber Force Field [(GAFF)](http://ambermd.org/antechamber/gaff.html)."
+    "Current we only have the coordinates information saved for the loaded molecules so the first thing we need to do is generate the forcefield parameters. In this case, we will use the Generalised Amber Force Field [(GAFF)](http://ambermd.org/antechamber/gaff.html)."
    ]
   },
   {
@@ -809,7 +809,7 @@
     "\n",
     "#### <span style=\"color:skyblue\">4.5.1 Box sizes of the solvated leg</span> <span style=\"color:purple\">(Extra)</span>   \n",
     "\n",
-    "One thing you can notice is that the box size of the bound and free leg are the same. This of course is a bit silly, because you don't need to use such a large box for just running the ligand in water. Since the two legs are decoupled, we can just solvate the ligand in a smaller box for the free leg."
+    "One thing you may notice is that the box size of the bound and free leg are the same. This of course is a bit silly, because you don't need to use such a large box for just running the ligand in water. Since the two legs are decoupled, we can just solvate the ligand in a smaller box for the free leg."
    ]
   },
   {
@@ -1071,7 +1071,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit ('working': conda)",
+   "display_name": "Python 3.9.10",
    "language": "python",
    "name": "python3"
   },
@@ -1085,7 +1085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.10"
   },
   "varInspector": {
    "cols": {
@@ -1118,7 +1118,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "53a7075aa6ba074ad24f268d28330e8ae9ce5d32ba0a76f329c5ee8540da26d4"
+    "hash": "91a4ca8273f7d6826e5f84789c42688b948ba55a4a582bdc4bdb0676eea3da3d"
    }
   }
  },
