--- a/introduction_to_alchemistry/answers/alchemical_introduction_answers.ipynb
+++ b/introduction_to_alchemistry/answers/alchemical_introduction_answers.ipynb
@@ -244,7 +244,7 @@
    "source": [
     "#### <span style=\"color:teal\">2.1 Maximum Common Substructure (MCS)</span>\n",
     "<a id=\"MCS\"></a>\n",
-    "In order to automatically figure out which atoms are common between ethane and methanol we can use the `matchAtoms()` function of BioSimSpace. This will compute a Maxmimum Common Substructure (MCS) match and return a dictionary that maps the indices of atoms in the ethane molecule to the indices of the atoms in the ethanol to which they match. An example of what and MCS match might look like is shown here:\n",
+    "In order to automatically figure out which atoms are common between ethane and methanol we can use the `matchAtoms()` function of BioSimSpace. This will compute a Maxmimum Common Substructure (MCS) match and return a dictionary that maps the indices of atoms in the ethane molecule to the indices of the atoms in the methanol to which they match. An example of what and MCS match might look like is shown here:\n",
     "\n",
     "![MCS](images/MCS.png)\n"
    ]
