typo fixes and answer for lomap score for a single perturbation

--- a/introduction_to_alchemistry/alchemical_introduction.ipynb
+++ b/introduction_to_alchemistry/alchemical_introduction.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "**<span style=\"color:teal\">Jupyter Cheat Sheet</span>**\n",
     "- To run the currently highlighted cell and move focus to the next cell, hold <kbd>&#x21E7; Shift</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
-    "- To run the currently highlighted cell and keep focus in the same cell, hold <kbd>&#x21E7; Ctri</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
+    "- To run the currently highlighted cell and keep focus in the same cell, hold <kbd>&#x21E7; Ctrl</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
     "- To get help for a specific function, place the cursor within the function's brackets, hold <kbd>&#x21E7; Shift</kbd>, and press <kbd>&#x21E5; Tab</kbd>;\n",
     "- You can find the full documentation at [biosimspace.org](https://biosimspace.org).\n",
     "\n",
@@ -447,7 +447,7 @@
    "source": [
     "### <span style=\"color:teal\">3. Solvation free energy</span>\n",
     "<a id=\"free\"></a>\n",
-    "We now need to define a protocol to describe the parameters used for the free energy perturbation. A simple protocol consists of a 2 fs timestep a runtime of 4 ns and using 9 equally spaced $\\lambda$ windows:"
+    "We now need to define a protocol to describe the parameters used for the free energy perturbation. A simple protocol consists of a 2 fs timestep, a runtime of 4 ns and using 9 equally spaced $\\lambda$ windows:"
    ]
   },
   {
