--- a/relative_binding_free_energies/answers/setup_rbfe_answers.ipynb
+++ b/relative_binding_free_energies/answers/setup_rbfe_answers.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "**<span style=\"color:teal\">Jupyter Cheat Sheet</span>**\n",
     "- To run the currently highlighted cell and move focus to the next cell, hold <kbd>&#x21E7; Shift</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
-    "- To run the currently highlighted cell and keep focus in the same cell, hold <kbd>&#x21E7; Ctri</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
+    "- To run the currently highlighted cell and keep focus in the same cell, hold <kbd>&#x21E7; ctrl</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
     "- To get help for a specific function, place the cursor within the function's brackets, hold <kbd>&#x21E7; Shift</kbd>, and press <kbd>&#x21E5; Tab</kbd>;\n",
     "- You can find the full documentation at [biosimspace.org](https://biosimspace.org).\n",
     "\n",
@@ -262,7 +262,7 @@
     "\n",
     "**<span style=\"color:skyblue\">1.2.1. Exercise: adding perturbations</span>**   \n",
     "\n",
-    "Below, add any other perturbations to complete a cycle. When we add perturbations we want to give them a low LOMAP score so that they run the larger number of windows defined in the protocol at the start."
+    "Below, add any other perturbations to complete a cycle. When we add perturbations we want to give them a low LOMAP score so that they run the larger number of windows defined in the protocol at the start. Alternatively, we can also recalculate the LOMAP score for just this single transformation in a similar way to how we calculated the network before, by just defining the network for these two ligands. Give either of these methods a go below:   "
    ]
   },
   {
@@ -281,7 +281,29 @@
    "outputs": [],
    "source": [
     "# answer\n",
-    "pert_network_dict[('ejm48', 'ejm51')] = 0.1"
+    "pert_network_dict[('ejm48', 'ejm51')] = 0.1\n",
+    "# arbitrarily, we have picked 0.1 . This is because it is below the LOMAP threshold defined in the protocol at the start."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternatively, if we want to recalculate the LOMAP score for this perturbation:\n",
+    "# if we consider the ligands list, we can use the index of the ligands we want to add an edge for.\n",
+    "# first we need to choose our ligands.\n",
+    "lig_a = \"ejm48\"\n",
+    "lig_b = \"ejm51\"\n",
+    "\n",
+    "# then, we need to find this index for our chosen edge that we are adding.\n",
+    "lig_a_index = ligand_names.index(lig_a)\n",
+    "lig_b_index = ligand_names.index(lig_b)\n",
+    "# finally, we need to calculate this single lomap score.\n",
+    "single_transformation, single_lomap_score = BSS.Align.generateNetwork([ligands[lig_a_index], ligands[lig_b_index]], names=[ligand_names[lig_a_index], ligand_names[lig_b_index]], plot_network=False)\n",
+    "print(f\"LOMAP score for {lig_a} to {lig_b} is {single_lomap_score[0]} .\")\n",
+    "pert_network_dict[(lig_a, lig_b)] = single_lomap_score[0]"
    ]
   },
   {
