--- a/relative_binding_free_energies/setup_rbfe.ipynb
+++ b/relative_binding_free_energies/setup_rbfe.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "**<span style=\"color:teal\">Jupyter Cheat Sheet</span>**\n",
     "- To run the currently highlighted cell and move focus to the next cell, hold <kbd>&#x21E7; Shift</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
-    "- To run the currently highlighted cell and keep focus in the same cell, hold <kbd>&#x21E7; Ctri</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
+    "- To run the currently highlighted cell and keep focus in the same cell, hold <kbd>&#x21E7; Ctrl</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
     "- To get help for a specific function, place the cursor within the function's brackets, hold <kbd>&#x21E7; Shift</kbd>, and press <kbd>&#x21E5; Tab</kbd>;\n",
     "- You can find the full documentation at [biosimspace.org](https://biosimspace.org).\n",
     "\n",
@@ -262,7 +262,7 @@
     "\n",
     "**<span style=\"color:skyblue\">1.2.1. Exercise: adding perturbations</span>**   \n",
     "\n",
-    "Below, add any other perturbations to complete a cycle. When we add perturbations we want to give them a low LOMAP score so that they run the larger number of windows defined in the protocol at the start."
+    "Below, add any other perturbations to complete a cycle. When we add perturbations we want to give them a low LOMAP score so that they run the larger number of windows defined in the protocol at the start. Alternatively, we can also recalculate the LOMAP score for just this single transformation in a similar way to how we calculated the network before, by just defining the network for these two ligands. Give either of these methods a go below:   "
    ]
   },
   {
