--- a/relative_binding_free_energies/analysis_rbfe.ipynb
+++ b/relative_binding_free_energies/analysis_rbfe.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "**<span style=\"color:teal\">Jupyter Cheat Sheet</span>**\n",
     "- To run the currently highlighted cell and move focus to the next cell, hold <kbd>&#x21E7; Shift</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
-    "- To run the currently highlighted cell and keep focus in the same cell, hold <kbd>&#x21E7; Ctri</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
+    "- To run the currently highlighted cell and keep focus in the same cell, hold <kbd>&#x21E7; Ctrl</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
     "- To get help for a specific function, place the cursor within the function's brackets, hold <kbd>&#x21E7; Shift</kbd>, and press <kbd>&#x21E5; Tab</kbd>;\n",
     "- You can find the full documentation at [biosimspace.org](https://biosimspace.org).\n",
     "\n",
